Rehandle child mods