@@ -5,6 +5,7 @@ import com.cleanroommc.catalogue.client.Branding;
 import com.cleanroommc.catalogue.client.CleanroomModData;
 import com.cleanroommc.catalogue.client.IModData;
 import com.cleanroommc.catalogue.platform.services.IPlatformHelper;
+import com.google.common.base.Strings;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiScreen;
 import net.minecraft.client.gui.GuiVideoSettings;
@@ -12,6 +13,8 @@ import net.minecraft.client.renderer.texture.TextureUtil;
 import net.minecraftforge.fml.client.FMLClientHandler;
 import net.minecraftforge.fml.common.Loader;
 import net.minecraftforge.fml.common.ModContainer;
+import net.minecraftforge.fml.common.ModMetadata;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.awt.image.BufferedImage;
@@ -21,6 +24,7 @@ import java.io.InputStream;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Author: MrCrayfish
@@ -29,20 +33,35 @@ public class CleanroomPlatformHelper implements IPlatformHelper {
 
     @Override
     public List<IModData> getAllModData() {
-        List<IModData> dataList = new ArrayList<>();
-        // Handle special containers
+        List<ModContainer> containerList = Loader.instance().getActiveModList();
+
+        // Add special mod containers
         ArrayList<ModContainer> specialContainerList = new ArrayList<>();
         FMLClientHandler.instance().addSpecialModEntries(specialContainerList);
-        specialContainerList.removeIf(modContainer -> {
+        containerList.addAll(specialContainerList);
+
+        // Add child mods to metadata
+        for (ModContainer container : containerList) {
+            if (container == null) continue;
+            ModMetadata metadata = container.getMetadata();
+            if (metadata != null && metadata.parentMod == null && !Strings.isNullOrEmpty(metadata.parent)) {
+                ModContainer parentContainer = Loader.instance().getIndexedModList().get(metadata.parent);
+                if (parentContainer != null) {
+                    metadata.parentMod = parentContainer;
+                    parentContainer.getMetadata().childMods.add(container);
+                }
+            }
+        }
+
+        List<IModData> dataList = new ArrayList<>();
+        containerList.removeIf(modContainer -> {
             if (modContainer.getModId().equals("optifine")) {
                 dataList.add(new OFData(modContainer));
                 return true;
             }
             return false;
         });
-        List<ModContainer> containerList = Loader.instance().getActiveModList();
-        containerList.addAll(specialContainerList);
-        dataList.addAll(containerList.stream().map(CleanroomModData::new).toList());
+        dataList.addAll(containerList.stream().map(CleanroomModData::new).collect(Collectors.toList()));
         return dataList;
     }
 
@@ -88,14 +107,21 @@ public class CleanroomPlatformHelper implements IPlatformHelper {
     }
 
     private static class OFData extends CleanroomModData {
+        private final String version;
+
         private OFData(ModContainer info) {
             super(info);
+            this.version = this.getDisplayVersion();
+        }
+
+        private @NotNull String getDisplayVersion() {
+            String version = this.getInnerVersion();
+            return version.substring(version.indexOf("OptiFine_1.12.2_") + 16);
         }
 
         @Override
         public String getVersion() {
-            String version = this.getInnerVersion();
-            return version.substring(version.indexOf("OptiFine_1.12.2_") + 16);
+            return this.version;
         }
 
         @Nullable
